--- a/styles/about.css
+++ b/styles/about.css
@@ -37,3 +37,39 @@
 	font-family: "Didot";
 	font-size: 32px;	
 }
+
+/* Tablet Styles */
+
+@media only screen and (max-width: 1200px) {
+	#about-me {
+		height: 340px;
+	}
+
+}
+
+@media only screen and (max-width: 800px) {
+	#about-me {
+		height: 270px;
+		width: 80%;
+		margin-left: 10%;
+		margin-right: 10%;
+	}
+
+	#fave-classes {
+		display: none;
+	}
+
+}
+
+@media only screen and (max-width: 600px) {
+	#about-me {
+		height: 270px;
+		width: 100%;
+		margin-left: -15%;
+	}
+
+	#fave-classes {
+		display: none;
+	}
+
+}
