--- a/styles/skills.css
+++ b/styles/skills.css
@@ -36,4 +36,69 @@
 	margin-top: -100px;
 	display: inline;
 	position: absolute;
+	text-align: center;
+}
+
+@media only screen and (max-width: 1200px) {
+	#title {
+		width: 20%;
+		padding-left: 40px;
+	}
+
+	.skill-title {
+		width: 22%
+	}
+
+	.skill-icon {
+		margin-top: -90px;
+		width: 70px;
+		height: 70px;
+	}
+
+}
+
+@media only screen and (max-width: 1000px) {
+	#title {
+		width: 20%;
+		padding-left: 40px;
+		font-size: 32px;
+	}
+
+	.skill-title {
+		width: 22%
+	}
+
+	.skill-icon {
+		margin-top: -80px;
+		width: 60px;
+		height: 60px;
+	}
+
+}
+
+@media only screen and (max-width: 800px) {
+	#skills {
+		height: 250px;
+	}
+
+	#title {
+		width: 100%;
+		text-align: center;
+		margin-bottom: 20px;
+		padding-left: 0px !important;
+	}
+
+	.skill-title {
+		font-size: 14px;
+		width: 31%
+	}
+
+}
+
+@media only screen and (max-width: 600px) {
+
+	.skill-title {
+		font-size: 10px;
+	}
+
 }
