--- a/styles/projects.css
+++ b/styles/projects.css
@@ -13,6 +13,8 @@
 
 .project {
 	position: relative;
+	color: black;
+	cursor: pointer;
 }
 
 .project-pic {
@@ -30,6 +32,7 @@
 	text-align: left;
 	width: 85%;
 	display: none;
+	text-decoration: none;
 }
 
 .overlay {
