--- a/styles/global.css
+++ b/styles/global.css
@@ -32,6 +32,7 @@
 	height: 40px;
 	left: 0;
 	top: 0;
+	z-index: 3;
 }
 
 .page-nav a {
@@ -91,18 +92,24 @@
 .page-title {
 	text-align: center;
 	width: 100%;
+	height: 50px;
 	margin-top: 90px;
 	margin-bottom: 10px;
 	font-family: "Didot";
 	font-size: 48px;
+	display: grid;
 }
 
-.date {
+.project-info {
 	text-align: center;
 	width: 100%;
 	font-family: "Futura";
 	font-size: 18px;
 	margin-bottom: 40px;
+}
+
+.project-info a {
+	color: rgb(247, 122, 100);
 }
 
 .subheader {
@@ -120,6 +127,8 @@
 }
 
 .margin-small {
+	position: relative;
+	width: 90%;
 	margin-left: 5%;
 	margin-right: 5%;
 	margin-top: 2%;
@@ -145,8 +154,12 @@
 	font-family: "Futura";
 }
 
+.process-content {
+	position: relative;
+}
+
 .final-product-text {
-	font-size: 18px;
+	font-size: 16px;
 	font-family: "Futura";
 	text-align: center;
 	margin-bottom: 20px;
@@ -157,16 +170,18 @@
 }
 
 .product-pic {
-	width: 60vw;
+	width: 60%;
+	margin-right: 10%;
 	height: auto;
 	float: left;
 	margin-bottom: 50px;
+	overflow: hidden;
 }
 
 .caption {
 	font-size: 18px;
 	font-family: "Futura";
-	width: 20vw;
+	width: 30%;
 	float: right;
 	margin-top: 5%;
 	margin-bottom: 10%;
@@ -201,7 +216,8 @@
 /* Style the accordion panel. Note: hidden by default */
 .panel {
     padding: 0 18px;
-    font-size: 12px;
+    font-size: 14px;
+    font-family: "Futura";
     background-color: white;
     max-height: 0;
     overflow: hidden;
