--- a/styles/about.css
+++ b/styles/about.css
@@ -1,6 +1,4 @@
 #about {
-	height: 30vw;
-	text-align: left;
 	position: relative;
 	z-index: 2;
 }
@@ -11,68 +9,55 @@
 }
 
 #about-me {
-	font-family: "Futura";
-	float: left;
-	width: 40%;
-	height: 280px;
+	font-family: "Metropolis";
+	width: 80%;
+	margin-left: 8%;
+	margin-right: 10%;
 	padding: 50px;
-	background-color: rgba(247, 122, 100, .13);
-	margin-bottom: 50px;
 }
 
 .about-text {
 	margin-top: 20px;
 	margin-bottom: 20px;
+	line-height: 20px;
+	color: #3A3A3A;
+}
+
+.about-text a {
+	color: rgb(247, 122, 100);
+	text-decoration: none;
 }
 
 #fave-classes {
-	font-family: "Futura";
-	float: right;
-	width: 45%;
-	margin-top: 50px;
+	font-family: "Metropolis";
+	width: 80%;
 }
 
 #fave-classes li {
-	line-height: 30px;
+	line-height: 20px;
 }
 
 #faves-title {
-	font-family: "Didot";
+	font-family: "Metropolis";
 	font-size: 32px;	
 }
 
-/* Tablet Styles */
+@media only screen and (max-width: 900px) {
+	#about {
+		margin-top: 10%;
+		margin-bottom: 10%;
+	}
 
-@media only screen and (max-width: 1200px) {
 	#about-me {
-		height: 340px;
+		padding: 0px;
 	}
 
-}
-
-@media only screen and (max-width: 800px) {
-	#about-me {
-		height: 270px;
-		width: 80%;
-		margin-left: 10%;
-		margin-right: 10%;
+	#about-title {
+		text-align: center;
 	}
 
-	#fave-classes {
-		display: none;
-	}
-
-}
-
-@media only screen and (max-width: 600px) {
-	#about-me {
-		height: 270px;
-		width: 100%;
-		margin-left: -15%;
-	}
-
-	#fave-classes {
-		display: none;
+	#faves-title {
+		text-align: center;
 	}
 
 }
