--- a/styles/contact.css
+++ b/styles/contact.css
@@ -10,7 +10,7 @@
 
 #contact-text {
 	margin-top: 30px;
-	font-family: "Futura";
+	font-family: "Metropolis";
 	font-size: 20px;
 	text-align: center;
 }
