--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,19 @@
+@font-face {
+	font-family: "Metropolis-Light";
+	src: url("fonts/Metropolis-Light.otf");
+}
+
+@font-face {
+	font-family: "Metropolis";
+	src: url("fonts/Metropolis-Regular.otf");
+}
+
+@font-face {
+	font-family: "Metropolis-Thin";
+	src: url("fonts/Metropolis-Thin.otf");
+}
+
+
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
@@ -8,23 +24,27 @@ table, th, td {
 	opacity: 0;
 }
 
+.gray {
+	color: #696969;
+}
+
 #arrow-down {
-	height: 50px;
-	width: 50px;
+	height: 40px;
+	width: 40px;
 	cursor: pointer;
 	position: absolute;
-	text-align: center;
-	margin-left: 50vw;
 	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
 }
 
 #arrow-up {
 	position: fixed;
 	right: 8px;
 	bottom: 8px;
-	height: 40px;
-	width: 40px;
-	background-color: white;
+	height: 30px;
+	width: 30px;
 	cursor: pointer;
 	z-index: 1;
 	-webkit-transform: rotate(180deg);
@@ -47,21 +67,30 @@ table, th, td {
 
 .page-nav a {
 	color: white;
-	text-decoration: none;	
+	text-decoration: none;
 }
 
 .page-nav-item {
 	text-align: center;
 	position: absolute;
 	display: inline-block;
-	font-family: "Futura";
-	font-size: 14px;
+	font-family: "Metropolis";
+	font-size: 16px;
 	margin-left: 5px;
 	margin-right: 5px;
-	margin-top: 10px;
+	margin-top: 13px;
 	cursor: pointer;
 	width: 200px;
+    -webkit-transition: color 0.6s; /* Safari */
+    transition: color 0.6s;	
 }
+
+.page-nav-item:hover {
+	color: #F77A64;
+    -webkit-transition: color 0.6s; /* Safari */
+    transition: color 0.6s;	
+}
+
 
 .left {
 	position: relative;
@@ -78,7 +107,7 @@ table, th, td {
 .center {
 	position: absolute;
 	margin: auto;
-	margin-top: 10px;
+	margin-top: 13px;
 	left: 0;
 	right: 0;
 	top: 0;
@@ -93,7 +122,7 @@ table, th, td {
 	padding-left: 40px;
 	padding-right: 40px;
 	border-radius: 5px;
-	font-family: "Futura";
+	font-family: "Metropolis";
 	font-size: 20px;
 	color: white; 
 	text-decoration: none
@@ -113,7 +142,7 @@ table, th, td {
 .project-info {
 	text-align: center;
 	width: 100%;
-	font-family: "Futura";
+	font-family: "Metropolis";
 	font-size: 18px;
 	margin-bottom: 40px;
 }
@@ -134,17 +163,18 @@ table, th, td {
 	text-align: center;
 	margin-bottom: 10px;
 	margin-top: 10px;
+	color: black !important;
 }
 
 .subheader3 {
-	font-family: "Futura";
+	font-family: "Metropolis";
 	font-size: 18px;
 	margin-bottom: 5px;
 	margin-top: 5px;
 }
 
 .h4 {
-	font-family: "Futura";
+	font-family: "Metropolis";
 	font-size: 18px;
 	margin-bottom: 5px;
 	margin-top: 5px;
@@ -184,22 +214,23 @@ table, th, td {
 }
 
 .content {
-	font-family: "Futura";
+	font-family: "Metropolis";
 	font-weight: lighter;
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: repeat(3, 1fr);
 }
 
 .summary {
-	background-color: rgba(247, 122, 100, .13);
+	border: 3px solid rgba(247, 122, 100, .13);
 	padding: 10px;
 	margin: 3px;
 	font-size: 14px;
+	color: #3A3A3A;
 }
 
 .process-overview {
 	font-size: 26px;
-	font-family: "Futura";
+	font-family: "Metropolis";
 }
 
 .process-content {
@@ -208,7 +239,7 @@ table, th, td {
 
 .final-product-text {
 	font-size: 16px;
-	font-family: "Futura";
+	font-family: "Metropolis";
 	text-align: center;
 	margin-bottom: 20px;
 }
@@ -268,7 +299,7 @@ table, th, td {
 
 .caption {
 	font-size: 18px;
-	font-family: "Futura";
+	font-family: "Metropolis";
 	width: 30%;
 	float: right;
 	margin-top: 5%;
@@ -277,7 +308,7 @@ table, th, td {
 
 .caption-large {
 	font-size: 14px;
-	font-family: "Futura";
+	font-family: "Metropolis";
 	width: 65%;
 	float: right;
 	margin-top: 5%;
@@ -308,7 +339,7 @@ table, th, td {
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
     background-color: rgb(247, 122, 100);
-    font-family: "Futura";
+    font-family: "Metropolis";
     font-size: 18px;
     color: white;
     cursor: pointer;
@@ -329,7 +360,8 @@ table, th, td {
 .panel {
     padding: 0 18px;
     font-size: 14px;
-    font-family: "Futura";
+    font-family: "Metropolis";
+    color: #3A3A3A;
     background-color: white;
     max-height: 0;
     overflow: hidden;
@@ -362,7 +394,19 @@ table, th, td {
 
 @media only screen and (max-width: 1000px) {
 	.content {
-		grid-template-columns: repeat(2, 1fr);
+		grid-template-columns: repeat(1, 1fr);
+	}
+
+	.summary {
+		background-color: #FFF;
+		margin: 0px;
+		padding: 0px;
+		border: none;
+	}
+
+	.subheader2 {
+		text-align: left;
+		margin-top: 20px;
 	}
 
 	.product-pic {
