--- a/styles/home.css
+++ b/styles/home.css
@@ -50,15 +50,8 @@ body {
 }
 
 #home-text-description {
-	font-family: "Didot";
+	font-family: "Metropolis-Light";
 	font-size: 32px;
-}
-
-.margin-small {
-	margin-left: 30px;
-	margin-right: 30px;
-	margin-top: 50px;
-	margin-bottom: 50px;
 }
 
 .padding-large {
