--- a/styles/nav.css
+++ b/styles/nav.css
@@ -29,8 +29,16 @@
 .nav-item {
 	margin: 15px;
 	display: inline-block;
-	font-family: "Futura";
+	font-family: "Metropolis";
 	cursor: pointer;
+    -webkit-transition: color 0.6s; /* Safari */
+    transition: color 0.6s;
+}
+
+.nav-item:hover {
+	color: #F77A64;
+    -webkit-transition: color 0.6s; /* Safari */
+    transition: color 0.6s;
 }
 
 /* Tablet Styles */
