--- a/styles/projects.css
+++ b/styles/projects.css
@@ -18,16 +18,16 @@
 }
 
 .project-pic {
-	width: 25vw;
-	height: 25vw;
-	margin: 40px;
+	width: 20vw;
+	height: 20vw;
+	margin: 5vw;
 	border: 1px solid #ECECEC;
 	z-index: 1;
 	cursor: pointer;
 }
 
 .captions {
-	font-family: "Futura";
+	font-family: "Metropolis";
 	font-size: 14px;
 	text-align: left;
 	width: 85%;
@@ -39,9 +39,9 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 25vw;
-	height: 25vw;
-	margin: 40px;
+	width: 20vw;
+	height: 20vw;
+	margin: 5vw;
 	background-color: rgba(0,0,0,0);
 	z-index: 2;
     -webkit-transition: background-color 0.6s; /* Safari */
@@ -51,7 +51,7 @@
 .overlay-text {
 	opacity: 0;
 	color: white;
-	font-family: "Futura";
+	font-family: "Metropolis";
 	font-size: 16px;
 	text-align: center;
 	padding: 10px;
@@ -75,19 +75,6 @@
 /* Tablet Styles */
 
 @media only screen and (max-width: 1200px) {
-	.project-pic {
-		width: 24vw;
-		height: 24vw;
-		margin: 20px;
-		border: 1px solid #ECECEC;		
-	}
-
-	.overlay {
-		width: 24vw;
-		height: 24vw;
-		margin: 20px;	
-	}
-
 	.overlay-text {
 		font-size: 12px;
 	}
