--- a/styles/skills.css
+++ b/styles/skills.css
@@ -1,4 +1,5 @@
 #skills {
+	position: relative;
 	width: 100%;
 	height: 200px;
 	background-color: #FFD31A;
@@ -7,7 +8,7 @@
 }
 
 #title {
-	font-family: "Didot";
+	font-family: "Metropolis";
 	font-size: 36px;
 	display: inline-block;
 	width: 20%;
@@ -17,7 +18,7 @@
 
 .skill-title {
 	text-align: center;
-	font-family: "Futura";
+	font-family: "Metropolis";
 	font-size: 16px;
 	display: inline-block;
 	width: 24%;
