--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,4 +1,5 @@
 #my-nav {
+	height: 48px;
 	width: 100%;
 	position: fixed;
 	z-index: 3;
@@ -54,14 +55,20 @@
 	}
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 750px) {
+	#my-nav {
+		height: 100px;
+	}
+
 	.nav-item {
-		font-size: 14px;
+		font-size: 12px;
+		margin: 8px;
+		margin-top: 40px;
+	}
+
+	.padding-large {
+		padding: 40px;
 	}
 }
 
-@media only screen and (max-width: 500px) {
-	.nav-item {
-		font-size: 10px;
-	}
-}
+
