--- a/styles/global.css
+++ b/styles/global.css
@@ -182,6 +182,13 @@ table, th, td {
 	margin-top: 5px;
 }
 
+.subheader4 {
+	font-family: "Metropolis";
+	font-size: 24px;
+	margin-bottom: 5px;
+	margin-top: 5px;	
+}
+
 .h4 {
 	font-family: "Metropolis";
 	font-size: 18px;
@@ -257,6 +264,11 @@ table, th, td {
 	color: rgb(247, 122, 100);
 }
 
+.inner-image {
+	width: 70%;
+	margin: 5%;
+}
+
 .product-pic {
 	width: 70%;
 	height: auto;
@@ -315,6 +327,15 @@ table, th, td {
 	margin-bottom: 10%;
 }
 
+.caption2 {
+	font-size: 16px;
+	font-family: "Metropolis";
+	width: 40%;
+	float: right;
+	margin-top: 5%;
+	margin-bottom: 10%;
+}
+
 .caption-large {
 	font-size: 14px;
 	font-family: "Metropolis";
@@ -343,7 +364,7 @@ table, th, td {
 	width: 90%;
 	height: 1px;
 	margin-top: 10px;
-	background-color: rgb(247, 122, 100);
+	background-color: rgb(130, 171, 227);
 }
 
 /* Style the buttons that are used to open and close the accordion panel */
@@ -361,45 +382,11 @@ table, th, td {
     transition: 0.4s;
 }
 
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover {
-    background-color: rgba(247, 122, 100, 0.8);
-}
-
-/* Style the accordion panel. Note: hidden by default */
 .panel {
     padding: 0 18px;
     font-size: 14px;
     font-family: "Metropolis";
     color: #3A3A3A;
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-}
-
-.accordion:after {
-    content: '\02795'; /* Unicode character for "plus" sign (+) */
-    font-size: 13px;
-    color: #777;
-    float: right;
-    margin-left: 5px;
-}
-
-.active:after {
-    content: "\2796"; /* Unicode character for "minus" sign (-) */
-}
-
-
-.inner-image {
-	width: 60%;
-	margin: 5%;
-}
-
-.inner-text {
-	width: 20%;
-	margin: 5%;
-	float: right;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -457,7 +444,7 @@ table, th, td {
 	}
 
 	#arrow-up {
-		background-color: rgb(247, 122, 100);
+		background-color: rgb(130, 171, 227);
 	}
 
 	.nav-text {
@@ -489,6 +476,10 @@ table, th, td {
 		right: 0;
 		top: 0;
 		bottom: 0;
+	}
+
+	.caption2 {
+		width: 100%;
 	}
 
 	.caption-grid {
