--- a/styles/skills.css
+++ b/styles/skills.css
@@ -2,7 +2,7 @@
 	position: relative;
 	width: 100%;
 	height: 200px;
-	background-color: #FFD31A;
+	background-color: rgb(247, 122, 100);
 	color: black;
 	clear: both;
 }
