--- a/styles/home.css
+++ b/styles/home.css
@@ -75,10 +75,6 @@ body {
         display: none;
     }
 
-    .right {
-        right: 5px;
-    }
-
     #home {
         text-align: left;
     }
@@ -93,6 +89,10 @@ body {
 
 @media only screen and (max-width: 500px) {
     #home-background {
+        display: none;
+    }
+
+    #footer-flower {
         display: none;
     }
 
