--- a/styles/about.css
+++ b/styles/about.css
@@ -1,63 +1,44 @@
+body {
+	margin: 0 !important;
+    font-family: "Helvetica Neue";
+    font-weight: 200;   
+}
+
 #about {
-	position: relative;
-	z-index: 2;
+	display: inline-block;
 }
 
 #about-title {
-	font-family: "Didot";
-	font-size: 42px;
+    padding-top: 10%;
+	font-family: "Helvetica Neue";
+    font-weight: 100;
+    letter-spacing: 25px;
+	font-size: 50px;
+	z-index: 1;
+    line-height: 90px;
+    text-align: center;
 }
 
-#about-me {
-	font-family: "Metropolis";
-	width: 80%;
-	margin-left: 8%;
-	margin-right: 10%;
-	padding: 50px;
+#about-pic {
+	float: left;
+	width: 40%;
+	margin-top: 5%;
+	margin-left: 7%;
+	margin-right: 3%;
 }
 
-.about-text {
-	margin-top: 20px;
-	margin-bottom: 20px;
-	line-height: 20px;
-	color: #3A3A3A;
+#about-description {
+	font-family: "Helvetica Neue";
+	font-weight: 250;
+	float: right;
+	width: 40%;
+	margin-top: 5%;
+	margin-right: 7%;
+	margin-left: 3%;
+	margin-bottom: 5%;
 }
 
-.about-text a {
-	color: rgb(130, 171, 227);
+#about-description a {
+	color: #18A398;
 	text-decoration: none;
-}
-
-#fave-classes {
-	font-family: "Metropolis";
-	width: 80%;
-}
-
-#fave-classes li {
-	line-height: 20px;
-}
-
-#faves-title {
-	font-family: "Metropolis";
-	font-size: 32px;	
-}
-
-@media only screen and (max-width: 900px) {
-	#about {
-		margin-top: 10%;
-		margin-bottom: 10%;
-	}
-
-	#about-me {
-		padding: 0px;
-	}
-
-	#about-title {
-		text-align: center;
-	}
-
-	#faves-title {
-		text-align: center;
-	}
-
 }
