--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,33 +1,61 @@
 #contact {
-	background-color: rgba(130, 171, 227, .30);
-}
-
-#contact-title {
-	font-family: "Didot";
-	font-size: 52px;
+	background-color: #393939;
+	color: white;
 	text-align: center;
+	vertical-align: bottom;
+	width: 100%;
 }
 
-#contact-text {
-	margin-top: 30px;
-	font-family: "Metropolis";
+.contact-title {
+	font-weight: 120;
 	font-size: 20px;
-	text-align: center;
+}
+
+.contact-text {
+	vertical-align: top;
+	color: white;
+	margin-top: 30px;
+	font-family: "Helvetica Neue";
+	font-size: 14px;
+	display: inline-block;
+	margin: 20px;
+}
+
+#left {
+	text-align: right;
+}
+
+#right {
+	text-align: left;
 }
 
 #social {
 	margin-top: 30px;
-	text-align: center;
+	text-align: left;
 }
 
 .social-icon {
 	width: 35px;
 	height: 35px;
 	display: inline-block;
-	margin: 15px;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
 #contact a {
-	color: rgb(130, 171, 227);
-
+	color: #18A398;
+	text-decoration: none;
 }
+
+#copyright {
+	vertical-align: bottom;
+	text-align: left;
+	padding: 8px;
+	background-color: #393939;
+	color: white;
+	width: 100%;
+	font-family: "Helvetica Neue";
+	font-size: 10px;
+}
+
+
