--- a/styles/global2.css
+++ b/styles/global2.css
@@ -2,6 +2,23 @@ body {
 	font-family: "Helvetica Neue"
 }
 
+#arrow-up {
+	background-color: white;
+	display: none;
+	position: fixed;
+	right: 8px;
+	bottom: 8px;
+	height: 30px;
+	width: 30px;
+	cursor: pointer;
+	z-index: 1;
+	-webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
+
 .margin-small {
 	position: relative;
 	width: 90%;
@@ -18,15 +35,21 @@ body {
 
 .page-title {
     padding-top: 10%;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
     font-weight: 100;
     letter-spacing: 25px;
 	font-size: 50px;
 	z-index: 1;
-    line-height: 90px;
+    line-height: -90px;
     text-align: center;
 }
 
 .project-info {
+	width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
 	font-size: 18px;
 	text-align: center;
 	font-weight: 120;
@@ -74,13 +97,18 @@ body {
 	margin-bottom: 15px;
 }
 
+.big-pic {
+	width: 100%;
+	margin-top: 5%;
+}
+
 .section-title {
+	display: inline-table;
+	width: 100%;
     padding-top: 10%;
     font-weight: 100;
     letter-spacing: 20px;
 	font-size: 50px;
-	z-index: 1;
-    line-height: 90px;
     text-align: center;	
 }
 
@@ -121,6 +149,30 @@ body {
 	opacity: 1;
     -webkit-transition: opacity 0.6s; /* Safari */
     transition: opacity 0.6s;
+}
+
+@media only screen and (max-width: 700px) {
+	.page-title {
+		padding-top: 20%;
+		font-size: 35px;
+		letter-spacing: 15px;
+	}
+
+	.section-title {
+		font-size: 35px;
+		letter-spacing: 15px;	
+	}
+
+	.project-info {
+		font-size: 16px;
+	}
+
+	.next-project {
+		width: 40%;
+		font-size: 14px;
+	}
+
+
 }
 
 
