--- a/styles/newstagram.css
+++ b/styles/newstagram.css
@@ -7,11 +7,6 @@ body {
 	display: inline-block;
 }
 
-.big-pic {
-	width: 100%;
-	margin-top: 5%;
-}
-
 #secondary-pics {
 	display: inline-block;
 	margin-top: 3%;
@@ -20,4 +15,17 @@ body {
 .pics-3 {
 	width: 32%;
 	margin-right: 1%;
+}
+
+.wireframe {
+	width: 80%;
+	margin: 10%;	
+}
+
+ @media only screen and (max-width: 700px) {
+	.pics-3 {
+		width: 90%;
+		margin: 5%;
+	}
+
 }
